--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@
 
       <div id="suggestions">
         <a href="https://exxcelsteel.com">Home Page</a> —
-        <a href="https://exxcelsteel.com/">deepak@exxcelsteel.com</a>
+        <a href="https://exxcelsteel.com/">deepak@exxcelpack.com</a>
       </div>
 
       <a href="/" class="logo logo-img-1x">
